--- a/hadoopdemo/pom.xml
+++ b/hadoopdemo/pom.xml
@@ -30,5 +30,10 @@
       <artifactId>hadoop-hdfs</artifactId>
       <version>2.5.0</version>
     </dependency>
+    <dependency>  
+        <groupId>org.apache.hadoop</groupId> 
+        <artifactId>hadoop-mapreduce-client-common</artifactId> 
+        <version>2.5.0</version>  
+    </dependency>
   </dependencies>
 </project>
